--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Pygame_Functions"]
 	path = Pygame_Functions
-	url = https://github.com/razlif/Pygame_Functions
+	url = https://github.com/Razlif/Pygame_Functions.git
